syntax = "proto3";

package api;

option go_package = "./api";

service Database {
    rpc GetDb    (GetDbRequest)    returns (GetDbResponse)    {}
    rpc InsertDb (InsertDbRequest) returns (InsertDbResponse) {}
    rpc DeleteDb (DeleteDbRequest) returns (DeleteDbResponse) {}
}

message GetDbRequest {
    string columns = 1;
    string table = 2;
    string condition = 3;

}

message GetDbResponse {
    uint32 status = 1;
    string data = 2;
}


message InsertDbRequest {
    string table = 1;
    string columns = 2;
    string values = 3;
}

message InsertDbResponse {
    uint32 status = 1;
}

message DeleteDbRequest {
    string table = 1;
    string condition = 2;
}

message DeleteDbResponse {
    uint32 status = 1;
}